# Labs

./: Lab1  common.h  hldetector.c  lab4.txt  lab5.txt  lab6.txt  lab7-8.txt  lab9-10.txt
laba_1/: prog1.sh
laba_3/: 3.1.ps1  3.2.ps1
laba_4/: CMakeLists.txt  Makefile  detector  generator  hlgenerator.c
laba_5/: CMakeLists.txt  hlgenerator.c
laba_5/src/: CMakeLists.txt  common.c  sum.c  sum.h
laba_5/tests/: CMakeLists.txt  testMain.c
laba_6/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  common.c  hlgenerator  hlgenerator.c  laba_6
laba_6/build_detector/: CMakeCache.txt  Makefile  cmake_install.cmake  laba_6
laba_6/build_generator/: CMakeCache.txt  Makefile  cmake_install.cmake  laba_6
laba_7-8/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  common.c  hlgenerator.c  laba_7-8
laba_9-10/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hldetnet.c
